# SalmonTools

./: CMakeLists.txt  README.md
include/: args.hpp
sample_data/: unmapped_random.txt
sample_data/sample_salmon_fmd_index/: bwaidx.amb  bwaidx.ann  bwaidx.bwt  bwaidx.pac  bwaidx.sa  versionInfo.json
sample_data/sample_salmon_quasi_index/: header.json  refInfo.json
scripts/: generateDecoyTranscriptome.sh  getDecoys.sh
src/: CMakeLists.txt  ExtractUnmapped.cpp  SalmonTools.cpp
